Change-Id: If86adf317a468da1720fdf47b0b909766f72f37e Signed-off-by: 王雪强 <592470261@qq.com>

--- a/ao-api-service/pom.xml
+++ b/ao-api-service/pom.xml
@@ -49,10 +49,17 @@
 			<groupId>com.ctrip.framework.apollo</groupId>
 			<artifactId>apollo-client</artifactId>
 		</dependency>
+		<!-- 微服务跟踪 add by wangxueqiang start -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
+			<version>4.8</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- 微服务跟踪 add by wangxueqiang start -->
   </dependencies>
 </project>
