--- a/ao-provider-service/src/main/resources/application-dev.properties
+++ b/ao-provider-service/src/main/resources/application-dev.properties
@@ -25,6 +25,15 @@ jedis.pool.config.maxTotal=100
 jedis.pool.config.maxIdle=10  
 jedis.pool.config.maxWaitMillis=100000  
 
+
+# redisson lock
+redisson.address=redis://39.105.200.153:6379
+redisson.password=
+
+#redisson.master-name=
+#redisson.password=
+#redisson.sentinel-addresses=39.105.200.153:6379
+
 #rabbitmq
 spring.rabbitmq.host=39.105.200.153
 spring.rabbitmq.port=5672
