--- a/ao-fileupload-service/src/main/resources/application-dev.properties
+++ b/ao-fileupload-service/src/main/resources/application-dev.properties
@@ -22,4 +22,24 @@ mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 mybatis.type-aliases-package=com.zkh.cloud.bean
 
 
+#redis
+jedis.pool.host=39.105.200.153
+jedis.pool.port=6379
+jedis.pool.config.maxTotal=100
+jedis.pool.config.maxIdle=10  
+jedis.pool.config.maxWaitMillis=100000  
 
+
+# redisson lock
+redisson.address=redis://39.105.200.153:6379
+redisson.password=
+
+#redisson.master-name=
+#redisson.password=
+#redisson.sentinel-addresses=39.105.200.153:6379
+
+#rabbitmq
+spring.rabbitmq.host=39.105.200.153
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
