--- a/ao-provider-service/src/main/resources/application-pro.properties
+++ b/ao-provider-service/src/main/resources/application-pro.properties
@@ -25,6 +25,10 @@ jedis.pool.config.maxTotal=100
 jedis.pool.config.maxIdle=10  
 jedis.pool.config.maxWaitMillis=100000  
 
+# redisson lock
+redisson.address=redis://39.105.200.153:6379
+redisson.password=
+
 #rabbitmq
 spring.rabbitmq.host=39.105.200.153
 spring.rabbitmq.port=5672
