Change-Id: Ifffc3242bdf5f59b0d7682575c6706382ca1ad15 Signed-off-by: 王雪强 <592470261@qq.com>

--- a/ao-provider-service/src/main/resources/application-dev.properties
+++ b/ao-provider-service/src/main/resources/application-dev.properties
@@ -41,3 +41,11 @@ spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 
 
+#logging
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.Java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
