--- a/ao-api-service/src/main/resources/application-pro.properties
+++ b/ao-api-service/src/main/resources/application-pro.properties
@@ -12,3 +12,27 @@ spring.application.name=ao-api-service
 ribbon.eureka.enabled= false
 #ao-provider-service
 ao-provider-service.ribbon.listOfServers= localhost:7900,localhost:7901,localhost:7902
+
+
+#redis
+jedis.pool.host=39.105.200.153
+jedis.pool.port=6379
+jedis.pool.config.maxTotal=100
+jedis.pool.config.maxIdle=10  
+jedis.pool.config.maxWaitMillis=100000  
+
+
+# redisson lock
+redisson.address=redis://39.105.200.153:6379
+redisson.password=
+
+#redisson.master-name=
+#redisson.password=
+#redisson.sentinel-addresses=39.105.200.153:6379
+
+#rabbitmq
+spring.rabbitmq.host=39.105.200.153
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+
