--- a/ao-provider-service/src/main/resources/application-dev.properties
+++ b/ao-provider-service/src/main/resources/application-dev.properties
@@ -49,3 +49,6 @@ log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.Java.sql.Connection=DEBUG
 log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG
+
+#txmanager\u5730\u5740
+tm.manager.url=http://localhost:8899/tx/manager/
